--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@
    margin-top: 2%;
  }
 
- .new-category {
+ .new-category, .new-store {
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -45,7 +45,7 @@
    margin-bottom: 2%;
  }
 
- .formNewCategory div {
+ .formNewCategory div{
    justify-content: center;
    align-items: center;
    text-align: center;
